@@ -53,11 +53,19 @@ public class Student<G> {
     }
 
     public int getTotalScore() {
-        if (grades.isEmpty() || !(grades.get(0) instanceof Number)) {
+        if (grades.isEmpty() || !(grades.getFirst() instanceof Number)) {
             return 0;
         }
         return grades.stream()
                 .mapToInt(g -> ((Number) g).intValue())
                 .sum();
+    }
+    public void setGrades(List<G> grades) {
+        this.grades.clear();
+        this.grades.addAll(grades);
+    }
+    public void setAssignmentCount(int count) {
+        // This method can be used to initialize the grades list with a specific size if needed
+        // For now, it does nothing as the grades list is dynamically sized
     }
 }
